# galaxy

./: .gitignore  .stglobalignore  pyproject.toml
client/src/components/History/Content/Dataset/: DatasetActions.vue
client/src/components/Panels/: ToolBox.vue
client/src/components/Tool/: ToolForm.vue  ToolInteractiveClient.vue  ToolPanel.vue  ToolTypeChooser.vue
client/src/components/ToolsList/: ToolsListTable.vue
client/src/entry/analysis/: AnalysisRouter.js
client/src/mvc/dataset/: dataset-li-edit.js
client/src/utils/navigation/: navigation.yml
config/: job_conf.xml.interactivetools
lib/galaxy/config/: __init__.py
lib/galaxy/config/sample/: datatypes_conf.xml.sample  galaxy.yml.sample
lib/galaxy/managers/: datasets.py  hdas.py  interactivetool.py  jobs.py
lib/galaxy/model/: __init__.py
lib/galaxy/model/migrations/alembic/versions_gxy/: 8a19186a6ee7_add_columns_to_interactivetool_entry_point.py  ee7d388c4e49_add_column_label_to_interactivetool_entry_point.py
lib/galaxy/tool_util/parser/: xml.py
lib/galaxy/tool_util/verify/: interactor.py
lib/galaxy/tool_util/xsd/: galaxy.xsd
lib/galaxy/tools/: __init__.py  evaluation.py
lib/galaxy/webapps/galaxy/api/: users.py
lib/galaxy/webapps/galaxy/controllers/: tool_runner.py
lib/tool_shed/test/test_data/repos/emboss_5_0470/1/: emboss_format_corrector.py
