[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
^/(
  | packages
)/
'''
force-exclude = 'lib/galaxy/util/jstree.py'

[tool.darker]
isort = true

[tool.poetry]
name = "galaxy"
version = "22.01.dev0"
description = "Galaxy is an open, web-based platform for accessible, reproducible, and transparent computational research."
authors = ["Galaxy Contributors"]
license = "AFL-3.0"
readme = "README.rst"
homepage = "https://galaxyproject.org/"
repository = "https://github.com/galaxyproject/galaxy/"
documentation = "https://docs.galaxyproject.org/"

[[tool.poetry.source]]
name = "galaxyproject"
url = "https://wheels.galaxyproject.org/simple"

[tool.poetry.dependencies]
a2wsgi = "~1.4"
aiofiles = "~0.8"
alembic = "~1.8"
apispec = "~5.2"
Babel = "~2.10"
bdbag = ">=1.6.3"
Beaker = "~1.11.0"
bioblend = "~0.18"
bleach = "~5.0"
boltons = "~21.0"
boto = "~2.49"
bx-python = "~0.8"
celery = "~5.2"
Cheetah3 = "!=3.2.6.post2"  # yanked release, https://github.com/python-poetry/poetry/issues/2453
cloudauthz = "==0.6.0"
cloudbridge = "~3.0"
circus = "~0.17"
cwltool = "==3.1.20211107152837"
dictobj = "~0.4"
docutils = "~0.16, !=0.17, !=0.17.1"
edam-ontology = "~1.25"
fastapi = "~0.79, >=0.68.2, !=0.69.0, !=0.70.0, !=0.70.1"  # https://github.com/tiangolo/fastapi/issues/4041
fastapi-utils = "~0.2"
fs = "~2.4"
future = "*"
galaxy_sequence_utils = "~1.1"
gravity = "~0.13, >=0.10.0"
gunicorn = "~20.1"
gxformat2 = "~0.15"
h5py = "~3.7"
importlib_resources = "~5.9"
isa-rwval = "~0.10"
kombu = "~5.2"
lagom = "~1.7"
Mako = "~1.2"
Markdown = "~3.4"
MarkupSafe = "~2.1"
Mercurial = "~6.2"
mrcfile = "~1.4"
nodeenv = "~1.7"
numpy = "~1.21"
paramiko = "~2.11, !=2.9.0, !=2.9.1"  # https://github.com/paramiko/paramiko/issues/1961
Parsley = "~1.3"
Paste = "~3.5"
pebble = "~4.6"
psutil = "~5.9.1"
pulsar-galaxy-lib = ">=0.14.13"
pycryptodome = "~3.15"
pydantic = "<2"
PyJWT = "~2.4"
pykwalify = "~1.8"
pylibmagic = "~0.2"
pyparsing = "~3.0"
python = ">=3.7,<3.8"  # Keep maximum version strict to appease numpy and scipy
python-dateutil = "~2.8"
python-magic = "~0.4"
python-multipart = "~00"  # required to support form parsing in FastAPI/Starlette
PyYAML = "~6.0"
refgenconf = ">=0.12.0"
requests = "~2.28"
Routes = "~2.5"
social-auth-core = {version = "==4.0.3", extras = ["openidconnect"]}
sortedcontainers = "~2.4"
SQLAlchemy = ">=1.4.25,<2"
sqlalchemy-migrate = "~0.13"  # required to support tool shed
sqlitedict = "~2.0"
sqlparse = "~0.4"
starlette = "~0.19"
starlette-context = "~0.3"
svgwrite = "~1.4"
tifffile = "~2021.11"
tuswsgi = "~0.5.4"
typing-extensions = "~4.3"
uvicorn = "~0.18"
uvloop = "~0.16"
WebOb = "~1.8"
Whoosh = "~2.7"
zipstream-new = "~1.1"

[tool.poetry.dev-dependencies]
ase = "~3.22, >=3.18.1"
black = "~22.6, ^22.1.0"
cwltest = "2.2.20210901154959"
darker = "~1.5"
fluent-logger = "~0.10"
httpx = "~0.23"
isort = "^5.10.1"
lxml = "~4.9, !=4.2.2"
markdown-it-reporter = "~0.0"
NoseHTML = "~0.4"
PyGithub = "~1.55"
pytest = "~7.1"
pytest-asyncio = "~0.19"
pytest-celery = "~0.0"
pytest-cov = "~3.0"
pytest-html = "~3.1"
python-irodsclient = "!=1.1.2"  # https://github.com/irods/python-irodsclient/issues/356
pytest-json-report = "~1.5"
pytest-mock = "~3.8"
pytest-postgresql = "~4.1, !=3.0.0"  # https://github.com/ClearcodeHQ/pytest-postgresql/issues/426
pytest-shard = "~0.1"
recommonmark = "~0.7"
responses = "~0.21"
selenium = "~4.3"
Sphinx = "~5.1, >=4.0"  # support docutils 0.17
sphinx_markdown_tables = "~0.0"
sphinx_rtd_theme = ">=1.0.0"
statsd = "~3.3, *"
testfixtures = "~7.0"
tuspy = "~1.0"
twill = "*"
watchdog = "~2.1"
